log
Fri, May 16, 2025  9:48:45 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  9:49:45 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a06a73d
Fri, May 16, 2025  9:53:15 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90829d7
Fri, May 16, 2025 10:21:12 PM: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:35: error: comparison between pointer and integer [-Werror]
     if(n == NULL || n->sudo[0][0] == NULL) return list;
                                   ^~
cc1.exe: all warnings being treated as errors
75e6c0b
Fri, May 16, 2025 10:21:28 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d04812f
Fri, May 16, 2025 10:22:42 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2bd69c6
Fri, May 16, 2025 10:31:36 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3da753e
Fri, May 16, 2025 10:36:39 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
c4c3f02
Sat, May 17, 2025 12:19:10 AM: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d651284
Sat, May 17, 2025 12:19:51 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
73582bb
Sat, May 17, 2025 12:23:22 AM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:7: error: unused variable 'arreglo3' [-Werror=unused-variable]
   int arreglo3[10];
       ^~~~~~~~
sudoku.c:49:7: error: unused variable 'arreglo2' [-Werror=unused-variable]
   int arreglo2[10];
       ^~~~~~~~
sudoku.c:48:7: error: unused variable 'arreglo1' [-Werror=unused-variable]
   int arreglo1[10];
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
0969001
Sat, May 17, 2025 12:23:59 AM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
c10a248
Sat, May 17, 2025 12:28:10 AM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
e3b5bc6
Sat, May 17, 2025 12:29:25 AM: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
a8acdd0
Sat, May 17, 2025  3:22:59 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a4bd0a1
Sat, May 17, 2025  3:26:19 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
8b035cf
